--- a/OC/Kexts/AppleALC.kext/Contents/Info.plist
+++ b/OC/Kexts/AppleALC.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>21G1974</string>
+	<string>23C71</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.8.9</string>
+	<string>1.9.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,23 +25,23 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.8.9</string>
+	<string>1.9.0</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>13F100</string>
+	<string></string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>12.3</string>
+	<string>14.4</string>
 	<key>DTSDKBuild</key>
-	<string>21E226</string>
+	<string>23E208</string>
 	<key>DTSDKName</key>
-	<string>macosx12.3</string>
+	<string>macosx14.4</string>
 	<key>DTXcode</key>
-	<string>1341</string>
+	<string>1530</string>
 	<key>DTXcodeBuild</key>
-	<string>13F100</string>
+	<string>15E204a</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>ALCUserClientProvider</key>
@@ -2590,19 +2590,19 @@
 					<key>CodecID</key>
 					<integer>283902549</integer>
 					<key>ConfigData</key>
-          <data>
-            ASccEAEnHQEBJx6gAScfkAGXHCABlx0QAZce
-            iwGXHwQBRxwwAUcdAQFHHhABRx+QAUcMAgIX
-            HEACFx0QAhceKwIXHwQCFwwC
-          </data>
+					<data>
+					ASccEAEnHQEBJx6gAScfkAGXHCABlx0wAZce
+					gQGXHwEBRxwwAUcdYQFHHhABRx+QAUcMAgIX
+					HEACFx1wAhceIQIXHwECFwwC
+					</data>
 					<key>FuncGroup</key>
 					<integer>1</integer>
 					<key>LayoutID</key>
 					<integer>86</integer>
 					<key>WakeConfigData</key>
-          <data>
-              AScMAAGXDAABRwwCAhcMAg==
-          </data>
+					<data>
+					AUcMAg==
+					</data>
 					<key>WakeVerbReinit</key>
 					<true/>
 				</dict>
@@ -3759,7 +3759,7 @@
 					<integer>86</integer>
 					<key>WakeConfigData</key>
 					<data>
-					AUcMAg==
+					AUcMAgIXDAIBlwcl
 					</data>
 					<key>WakeVerbReinit</key>
 					<true/>
